Introduce ICredentials, IConnection, IConfiguration
Rework Email